ecmascript/parser/tests/test262-error-references/fail/154f02d86fce5e81.js.stderr
error: Expected ;, got )
 --> $DIR/tests/test262-parser/fail/154f02d86fce5e81.js:1:22
  |
1 | for (const x = 0 in y){}
  |                      ^

